--- a/list-flight.html
+++ b/list-flight.html
@@ -17,15 +17,15 @@
             <div class="logo-white">
                 <nav id="nav3">
                     <ul>
-                        <li><a href="/search-flight.html"> &lt; </a></li>
-                        <li><a href="/">Leggo</a></li>
+                        <li><a href="https://localhost/github/leggo/search-flight.html"> &lt; </a></li>
+                        <li><a href="https://localhost/github/leggo/index.html">Leggo</a></li>
                     </ul>
                 </nav>
             </div>
             <nav id="nav3">
                 <ul>
-                    <li><a href="/account.html">User</a></li>
-                    <li><a href='/account.html'><i class="material-icons" id="material-icons">account_circle</i></a></li>
+                    <li><a href="https://localhost/github/leggo/account.html">User</a></li>
+                    <li><a href='https://localhost/github/leggo/account.html'><i class="material-icons" id="material-icons">account_circle</i></a></li>
                 </ul>
             </nav>
         </div>
