--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <nav id="nav-index">
             <ul>
-                <li><a id=aboutLink href="/aboutus.html">About</a></li>
+                <li><a id=aboutLink href="https://localhost/github/leggo/aboutus.html">About</a></li>
                 <li><a id=notifLink href="#">Notification</a></li>
-                <li><a id="userLink" href="/account.html">User</a></li>
+                <li><a id="userLink" href="https://localhost/github/leggo/account.html">User</a></li>
                 <li><a id="accountLink"><i class="material-icons">account_circle</i></a></li>
             </ul>
         </nav>
@@ -119,7 +119,7 @@
         userLink.addEventListener("click", (event) => {
             if (window.matchMedia("(max-width: 1020px)").matches) {
                 // redirect to mobile account page
-                window.location.href = "/maccount.html";
+                window.location.href = "https://localhost/github/leggo/maccount.html";
                 event.preventDefault();
             }
         });
@@ -127,7 +127,7 @@
         accountLink.addEventListener("click", (event) => {
             if (window.matchMedia("(max-width: 1020px)").matches) {
                 // redirect to mobile account page
-                window.location.href = "/maccount.html";
+                window.location.href = "https://localhost/github/leggo/maccount.html";
                 event.preventDefault();
             }
         });
@@ -136,7 +136,7 @@
 
         inputElement.addEventListener('keydown', function (event) {
             if (event.key === 'Enter') {
-                navigateTo('/search-flight.html');
+                navigateTo('https://localhost/github/leggo/search-flight.html');
             }
         });
 
