--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&display=swap" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 	<link rel="stylesheet" href="public/css/about.css" />
-
+	<base href="https://localhost/github/leggo/">
 </head>
 
 <body>
@@ -17,13 +17,13 @@
 
 		<div class="index-nav">
 			<div class="logo">
-				<a href="/">Leggo</a>
+				<a href="">Leggo</a>
 			</div>
 			<nav id="nav-index">
 				<ul>
-					<li><a id=aboutLink href="/aboutus.html">About</a></li>
+					<li><a id=aboutLink href="aboutus.html">About</a></li>
 					<li><a id=notifLink href="#">Notification</a></li>
-					<li><a id="userLink" href="/account.html">User</a></li>
+					<li><a id="userLink" href="account.html">User</a></li>
 					<li><a id="accountLink"><i class="material-icons">account_circle</i></a></li>
 				</ul>
 			</nav>
