--- a/booking.html
+++ b/booking.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flight Booking</title>
     <link rel="stylesheet" href="public/css/style.css">
+    <base href="https://localhost/github/leggo/">
 </head>
 <body>
     <h1>Flight Booking</h1>
