--- a/help.html
+++ b/help.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <base href="https://localhost/github/leggo/">
     <title>Leggo</title>
 </head>
 
@@ -20,15 +21,15 @@
                 <div class="logo-white">
                     <nav>
                         <ul>
-                            <li><a href="/"> &lt; </a></li>
-                            <a href="/">Leggo</a>
+                            <li><a href=""> &lt; </a></li>
+                            <a href="">Leggo</a>
                         </ul>
                     </nav>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="/account.html" style="color: white; font-size: 30px;">User</a></li>
-                        <li><a href='/account.html'><i class="material-icons"
+                        <li><a href="account.html" style="color: white; font-size: 30px;">User</a></li>
+                        <li><a href='account.html'><i class="material-icons"
                                     style="color: white; font-size: 60px;">account_circle</i></a></li>
                     </ul>
                 </nav>
@@ -40,23 +41,24 @@
                             Leggo
                         </div>
                         <div class="account-main-body-panel-left-nav">
-                            <button class="account-main-body-panel-left-button" onclick="navigateTo('/account.html')">
+                            <button class="account-main-body-panel-left-button" onclick="navigateTo('account.html')">
                                 Akun
                             </button>
 
-                            <button class="account-main-body-panel-left-button" onclick="navigateTo('/payment.html')">
+                            <button class="account-main-body-panel-left-button" onclick="navigateTo('payment.html')">
                                 Pembayaran
                             </button>
 
-                            <button class="account-main-body-panel-left-button" onclick="navigateTo('/orders.html')">
+                            <button class="account-main-body-panel-left-button" onclick="navigateTo('orders.html')">
                                 Pesanan
                             </button>
 
-                            <button class="account-main-body-panel-left-button-current" onclick="navigateTo('/help.html')">
+                            <button class="account-main-body-panel-left-button-current"
+                                onclick="navigateTo('help.html')">
                                 Pusat Bantuan
                             </button>
 
-                            <button class="account-main-body-panel-left-button" onclick="navigateTo('/settings.html')">
+                            <button class="account-main-body-panel-left-button" onclick="navigateTo('settings.html')">
                                 Pengaturan
                             </button>
                         </div>
@@ -90,14 +92,14 @@
         mediaQuery.addListener((event) => {
             if (event.matches) {
                 // redirect to mobile account page
-                window.location.href = "/mhelp.html";
+                window.location.href = "mhelp.html";
             }
         });
 
         // check the initial state of the media query
         if (mediaQuery.matches) {
             // redirect to mobile account page
-            window.location.href = "/mhelp.html";
+            window.location.href = "mhelp.html";
         }
 
         function navigateTo(url) {
