--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
                 <li><a id="aboutLink" href="aboutus.html">About</a></li>
                 <li><a id="notifLink" href="#">Notification</a></li>
                 <li class="dropdown">
-                    <a id="userLink" href="account.html">User</a>
-                    <div class="dropdown-content">
-                        <a href="account.html">Account</a>
-                        <a href="public/php/logout.php">Logout</a>
+                    <a id="userLink" href="#">User</a>
+                    <div class="dropdown-content" id="dropdown-content">
+                        <!-- Dropdown content will be populated here -->
                     </div>
                 </li>
                 <li><a id="accountLink"><i class="material-icons">account_circle</i></a></li>
@@ -81,13 +80,26 @@
             updateImageDisplay();
         });
 
-        // Fetch username and update the user link
+        // Fetch user information and update the menu accordingly
         document.addEventListener('DOMContentLoaded', () => {
             fetch('public/php/get_username.php')
                 .then(response => response.json())
                 .then(data => {
                     const userLink = document.getElementById('userLink');
+                    const dropdownContent = document.getElementById('dropdown-content');
+                    
                     userLink.textContent = data.username;
+                    
+                    if (data.logged_in) {
+                        dropdownContent.innerHTML = `
+                            <a href="account.html">Account</a>
+                            <a href="public/php/logout.php">Logout</a>
+                        `;
+                    } else {
+                        dropdownContent.innerHTML = `
+                            <a href="login.php">Login</a>
+                        `;
+                    }
                 })
                 .catch(error => console.error('Error fetching username:', error));
         });
