--- a/account.html
+++ b/account.html
@@ -22,16 +22,14 @@
                     <nav>
                         <ul>
                             <li><a href=""> &lt; </a></li>
-                            <a href="">Leggo</a>
+                            <a href="" id="logoLink">Leggo</a>
                         </ul>
                     </nav>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="account.html" style="color: white; font-size: 30px;" id="usernameLink">User</a>
-                        </li>
-                        <li><a href='account.html'><i class="material-icons"
-                                    style="color: white; font-size: 60px;">account_circle</i></a></li>
+                        <li><a href="account.html" style="color: white; font-size: 30px;" id="usernameLink">User</a></li>
+                        <li><a href='account.html'><i class="material-icons" style="color: white; font-size: 60px;">account_circle</i></a></li>
                     </ul>
                 </nav>
             </div>
@@ -43,16 +41,11 @@
                         </div>
                         <div class="account-main-body-panel-left-nav">
                             <div class="account-main-body-panel-left-nav">
-                                <button class="account-main-body-panel-left-button-current"
-                                    onclick="navigateTo('account.html')">Akun</button>
-                                <button class="account-main-body-panel-left-button"
-                                    onclick="navigateTo('payment.html')">Pembayaran</button>
-                                <button class="account-main-body-panel-left-button"
-                                    onclick="navigateTo('orders.html')">Pesanan</button>
-                                <button class="account-main-body-panel-left-button"
-                                    onclick="navigateTo('help.html')">Pusat Bantuan</button>
-                                <button class="account-main-body-panel-left-button"
-                                    onclick="navigateTo('settings.html')">Pengaturan</button>
+                                <button class="account-main-body-panel-left-button-current" onclick="navigateTo('account.html')">Akun</button>
+                                <button class="account-main-body-panel-left-button" onclick="navigateTo('payment.html')">Pembayaran</button>
+                                <button class="account-main-body-panel-left-button" onclick="navigateTo('orders.html')">Pesanan</button>
+                                <button class="account-main-body-panel-left-button" onclick="navigateTo('help.html')">Pusat Bantuan</button>
+                                <button class="account-main-body-panel-left-button" onclick="navigateTo('settings.html')">Pengaturan</button>
                             </div>
                         </div>
                     </div>
@@ -62,7 +55,7 @@
                             Akun
                         </div>
                         <div class="account-main-body-panel-right-inside-panel">
-                            <div class="account-main-body-panel-right-text-black-big">
+                            <div class="account-main-body-panel-right-text-black-big" id="usernameTitle">
                                 User
                             </div>
                             <div class="account-main-body-panel-right-box">
@@ -125,12 +118,17 @@
                     if (data.error) {
                         console.error(data.error);
                     } else {
+                        document.getElementById('usernameLink').textContent = data.username;
+                        document.getElementById('usernameTitle').textContent = data.username;
                         document.getElementById('phoneNumber').textContent = data.phone_number;
                         document.getElementById('email').textContent = data.email;
-                        document.getElementById('password').textContent = data.password;
+                        document.getElementById('password').textContent = '*'.repeat(8);
                     }
                 })
-                .catch(error => console.error('Error fetching user info:', error));
+                .catch(error => {
+                    console.error('Error fetching login status:', error);
+                    window.location.href = 'login.php'; // Redirect in case of error
+                });
         });
     </script>
 </body>
