--- a/orders.html
+++ b/orders.html
@@ -28,7 +28,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="account.html" style="color: white; font-size: 30px;">User</a></li>
+                        <li><a href="account.html" style="color: white; font-size: 30px;" id="usernameLink">User</a></li>
                         <li><a href='account.html'><i class="material-icons"
                                     style="color: white; font-size: 60px;">account_circle</i></a></li>
                     </ul>
@@ -109,6 +109,23 @@
         function navigateTo(url) {
             window.location.href = url;
         }
+
+        // Fetch user information
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('public/php/get_user_info.php')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        console.error(data.error);
+                    } else {
+                        document.getElementById('usernameLink').textContent = data.username;
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching login status:', error);
+                    window.location.href = 'login.php'; // Redirect in case of error
+                });
+        });
     </script>
 </body>
 
