--- a/pay.html
+++ b/pay.html
@@ -65,7 +65,7 @@
             </div>
             <div class="customer-container">
                 <h2><b>Data Customer</b></h2>
-                    <div class="form-group">
+                    <div class="form-groupp">
                         <input type="text" id="NamaLengkap" name="nama" value="Nama Lengkap" style="color: gray" required
                          onfocus="if(this.value==='Nama Lengkap'){this.value=''; this.style.color='gray'}" 
                          onblur="if(this.value===''){this.value='Nama Lengkap'; this.style.color='gray'} else {this.style.color='black'}" 
