--- a/list-flight.html
+++ b/list-flight.html
@@ -120,6 +120,7 @@
                     </div>
                 </div>-->
                 </div>
+                <div id="return-flight-container"></div>
             </div>
         </div>
 
